--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@trpc/client": "^10.45.1",
     "@trpc/server": "^10.45.1",
+    "@vueuse/core": "^10.7.2",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -24,6 +25,7 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "trpc-nuxt": "^0.10.19",
+    "v-calendar": "next",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
@@ -34,6 +36,6 @@
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.34",
     "shadcn-nuxt": "^0.9.0",
-    "tailwindcss": "^3.4.1"
+    "typescript": "^5.3.3"
   }
 }
