--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.0",
     "@trpc/client": "^10.45.1",
     "@trpc/server": "^10.45.1",
+    "@vee-validate/zod": "^4.12.5",
     "@vueuse/core": "^10.7.2",
+    "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -20,19 +23,23 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-vue-next": "^0.323.0",
     "mysql2": "^3.9.1",
+    "nodemailer": "^6.9.9",
     "nuxt": "^3.10.1",
     "radix-vue": "^1.4.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "trpc-nuxt": "^0.10.19",
     "v-calendar": "next",
-    "vue": "^3.4.15",
-    "vue-router": "^4.2.5"
+    "vee-validate": "^4.12.5",
+    "vue": "3.3.13",
+    "vue-router": "^4.2.5",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.11.3",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/nodemailer": "^6.4.14",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.34",
     "shadcn-nuxt": "^0.9.0",
