--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "trpc-nuxt": "^0.10.19",
     "v-calendar": "next",
     "vee-validate": "^4.12.5",
-    "vue": "3.3.13",
+    "vue": "^3.4.15",
     "vue-router": "^4.2.5",
     "zod": "^3.22.4"
   },
